--- a/templates/events.html
+++ b/templates/events.html
@@ -58,7 +58,7 @@
                         </select>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Create Event</button>
+                <button type="submit" class="btn btn-dark">Create Event</button>
             </form>
         </div>
     </div>
